--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -23,7 +23,6 @@
 
         display: flex;
         margin:  auto;
-        background-color: green;
         width: 90%;
         height: 90%;
         flex-direction: column;
@@ -59,14 +58,19 @@
         text-align: center;
         justify-content: center;
         align-items: center;
-        background-color: rgb(191, 191, 191);
+        background-color: black;
         border-radius: 10px;
-        color: black;
+        color: white;
         border: none;
-        width: 100px;
-        height: 50px;
-
+        width: 80px;
+        height: 30px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); /* Horizontal offset, vertical offset, blur radius, and color */
+        transition: transform 0.1s ease; 
         
+    }
+
+    .close-button:active {
+        transform: scale(1.1); /* Scales up the button to 110% of its original size */
     }
 
     .product-modal-header-container {
@@ -75,19 +79,17 @@
         justify-content: space-between;
         flex-direction: row;
         width: 100%;
-        background-color: orange;
     }
 
     .unbranded-club-Logo-container {
 
         padding: 0 5%;
-        background-color: brown;
+
     }
 
     .product-modal-information-container {
 
         display: flex;
-        background-color: lime;
         width: 100%;
         flex-direction: row;
         justify-content: space-evenly;
@@ -98,7 +100,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        background-color: cadetblue;
         width: 40%;
     }
 
@@ -180,10 +181,107 @@
 
       @media only screen and (max-width: 850px) {
 
+        .unbranded-club-logo-black {
+
+            width: 100px;
+            height: 100px;
+            padding: 8% 0;
+        }
+
+        .product-modal-header-container {
+
+            padding: 1% 0;
+        }
+
+        .unbranded-club-Logo-container h1{
+
+            font-size: 14px;
+
+        }
+
+        .unbranded-club-Logo-container {
+            margin: auto;
+        }
+
+        .product-modal-container {
+
+            display: flex;
+            margin:  auto;
+            width: 90%;
+            height: 90%;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+    
+        }
+
+        .product-modal-information-container {
+
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+
+
+    .unbranded-club-Logo-container {
+
+        padding: 0 5%;
+        width: 100%;
+        display: flex;
+    }
+
+    .product-image-container {
+        margin: 0 auto;
+    }
+
+    .product-description-container {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 100%;
+        margin: auto 0;
+        overflow: scroll;
+
+    }
+
+ 
+
+   
+
+    
+
+        
+
         .toast {
 
-            width: 80%;
-        }
+            z-index: 9999;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            color: black;
+            padding: 10px;
+            border-radius: 10px;
+            width: 300px;
+            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            
+          }
+
+          .toast-button-container {
+
+            display: flex;
+            margin: auto;
+            justify-content: center;
+            align-items: center;
+            width: 90%;
+            
+          }
 
         
 
